--- a/oShareAPI/package.json
+++ b/oShareAPI/package.json
@@ -15,7 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.0"
+    "express-fileupload": "^1.2.0",
+    "multer": "^1.4.2"
   }
 }
