--- a/oShareAPI/package.json
+++ b/oShareAPI/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sharp": "^0.27.0",
+    "video-thumbnail-generator": "^1.1.3"
   }
 }
